_smallscreen.scss
@media screen and (max-width: 800px) {

    body{
      background-size: 100% 100%;
    }
    .page-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;;
    }

    .main{
      grid-column: 2/5;
      grid-row: unset;
    }

    .intro{
     display: grid;
     grid-gap: 20px;
     grid-template-columns: unset;
     grid-template-rows: 300px auto auto auto;
     grid-row: unset;
     grid-column: 1/2;
    }

    header {
      display: unset;
      grid-gap: unset;
      grid-template-columns: unset;
      grid-column: unset;
      grid-row: 1;
      margin:10px;
  }

    .sidebar {
      display: unset;
      grid-row: unset;
      grid-column: 1/5;
      grid-template-columns: unset;
      object-fit:fill;
     }

    .wrapper{
        display: grid;
        grid-gap: 20px;
        grid-template-columns: auto auto auto ;
        grid-template-rows: unset;
  
    }

    .summary{
      grid-column: unset;
      grid-row: unset;
    }

    .preamble{
      grid-column: unset;
      grid-row: 3/5;
    }

    footer{
      font-size: unset;
      text-align: left;
    }
  
  footer a {
      padding: 0px;
      font-size: 1.4em;
      margin: 10px;
      font-style: italic;
  }

  .page-wrapper>section>div,
.page-wrapper>div>div,
aside>div>div,
footer {
    background: rgba(128, 128, 128, 0.9);
    border-radius: 15px;
    margin: 10px;
    padding: 15px;
}

 ul{
  line-height: 1.3;
  display: unset;
  text-align: center;
  font-style: italic;
 }

 h3{
  text-align: center;
 }

 #zen-explanation {
  margin-top: 10px;
}

  //   .design-selection {
     
  // }

    // .page-wrapper .wrapper .design-selection{
    //   grid-column: 1/2;
    //   grid-row: unset;
    //   object-fit: cover;
    // }
  }

